# horus-sentinel

./: CLAUDE.md  HORUS_Sentinel_Master_Plan.md  HORUS_Sentinel_Pitch_Deck.md  IMPLEMENTATION_STATUS.md  PITCH_SCRIPT.md  PITCH_SCRIPT_EG.md  Plan new.md  README.md  SETUP.md  WEEK5_COMPLETION.md  WORKFLOW_USAGE.py  requirements-dev.txt  requirements.txt  week01-plan.md
argus-recon-main/argus-recon-main/: .env.example  ARGUS_Architecture.md  argus.db  docker-compose.yml  pyproject.toml  requirements.txt  test_integration_workflow.py
horus-sentinel/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.md  Dockerfile  LICENSE  Makefile  README.md  RESPONSIBLE_USE.md  RUN.md  SYSTEM_TEST_REPORT.md  USER_MANUAL.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
horus-sentinel/.github/: pull_request_template.md
horus-sentinel/agents/: __init__.py  active_recon_agent.py  analysis_agent.py  base.py  geo_event_agent.py  osint_agent.py  report_agent.py  threat_intel_agent.py  web_infra_agent.py
horus-sentinel/api/: chat.py  demo.py  dto.py  main.py  routes.py  setup.py
horus-sentinel/core/: analysis_store.py  audit.py  authorization.py  cache.py  config.py  db.py  findings_store.py  jobs.py  queue.py  rate_limit.py  setup_wizard.py
horus-sentinel/data/: attack_knowledge.json  geo_corpus.sample.json
horus-sentinel/deploy/: Modelfile.example  docker-compose.yml
horus-sentinel/graph/: __init__.py  knowledge_graph.py  neo4j_writer.py
horus-sentinel/horus-ui/: index.html
horus-sentinel/horus_brain/: __init__.py  brain.py  hf_provider.py  (+3 more)
(+98 files in other folders)
