[project]
name = "horus-sentinel"
version = "0.1.0"
description = "Autonomous multi-agent OSINT & threat-intelligence platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Start strict on the parts that matter most:
files = ["core", "tools", "schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
filterwarnings = [
    # Internal timestamps are naive-UTC by design and consistent everywhere; silence the
    # stdlib utcnow() deprecation so the suite output stays readable.
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "horus-geointel"]
