[project]
name = "argus-recon"
version = "0.1.0"
description = "ARGUS — AI-Driven Autonomous Reconnaissance & EASM platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008", # FastAPI's Depends(...) in defaults is the standard idiom
]
